discussion/kv_engine/161188/161188_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48094:

Change-Id: I7e75997c6c797203b67d05c71a1cdaf3b05e5056

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-09-10 07:55:18.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-10 08:04:17.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33773/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/rocksdb-kvstore/rocksdb-kvstore.cc:1424:61:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33773/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39653/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\third_party\googletest\googletest\include\gtest/internal/gtest-type-util.h(154): error C2976: "testing::internal::Types": too few template arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39653/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12193/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rocksdb-kvstore/rocksdb-kvstore.cc:1424:61: error: expected function body after function declarator [clang-diagnostic-error]
                                   CollectionID collection) override {
                                                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12193/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/rocksdb-kvstore/rocksdb-kvstore.cc:1424:61:
error: expected function body after function declarator [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12193/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1835/ : FAILURE

Compile error at [2021-09-10T07:57:31.705Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/rocksdb-kvstore/rocksdb-kvstore.cc:1424:61:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1835/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13804/ : FAILURE

Compile error at [2021-09-10T07:57:03.881Z] ../third_party/googletest/googletest/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13804/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14046/ : FAILURE

Compile error at [2021-09-10T07:56:35.929Z] ../third_party/googletest/googletest/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const std::chrono::duration<long int>&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14046/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14529/ : FAILURE

Compile error at [2021-09-10T07:56:44.462Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/build/../third_party/googletest/googletest/include/gtest/internal/gtest-type-util.h:154:16:
error: too few template arguments for class template "Types"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14529/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12951/ : FAILURE

Compile error at [2021-09-10T07:58:34.373Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/build/../third_party/googletest/googletest/include/gtest/internal/gtest-type-util.h:154:16:
error: too few template arguments for class template "Types"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12951/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22033/ : FAILURE

Compile error at [2021-09-10T07:58:06.564Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/build/../third_party/googletest/googletest/include/gtest/internal/gtest-type-util.h:154:16:
error: too few template arguments for class template "Types"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22033/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1854/ : FAILURE

Compile error at [2021-09-10T07:56:58.365Z] ../third_party/googletest/googletest/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const std::chrono::duration<long int>&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1854/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10985/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
